--- a/applications.html
+++ b/applications.html
@@ -11,7 +11,7 @@
     <nav class="top-bar" data-topbar>
       <ul class="title-area">
         <li class="name">
-          <h1><a href="/dashboard/index.html">Apache Friends</a></h1>
+          <h1><a href="/dashboard/index.html">Apacs</a></h1>
         </li>
         <li class="toggle-topbar menu-icon">
           <a href="#">
@@ -36,7 +36,7 @@
     <div class="hero">
        <div class="row">
          <div class="large-12 columns">
-            <p>Apache Friends and Bitnami are cooperating to make dozens of open source applications available on XAMPP, for free. Bitnami-packaged applications include Wordpress, Drupal, Joomla! and dozens of others and can be deployed with one-click installers. Visit the <a href="https://bitnami.com/xampp?utm_source=bitnami&utm_medium=installer&utm_campaign=XAMPP%2BModule" target="_blank">Bitnami XAMPP page</a> for details on the currently available apps.</p><br/>
+            <p>Apache Friends and Bitnami Wordpress, Drupal, Joomla! and dozens of others and can be deployed with one-click installers. Visit the <a href="https://bitnami.com/xampp?utm_source=bitnami&utm_medium=installer&utm_campaign=XAMPP%2BModule" target="_blank">Bitnami XAMPP page</a> for details on the currently available apps.</p><br/>
             <p>Check out our <a href="https://www.apachefriends.org/bitnami_for_xampp.html" target="_blank" >Bitnami for XAMPP Start Guide</a> for more information about the applications installed.</p><br/>
             <p style="background: #FFFACD; border: 1px solid #FF6347; padding: 5px">We are working on making Bitnami add-ons available for PHP 7, it is possible the current add-ons do not work well with this version.</p>
          </div>
