--- a/applications.html
+++ b/applications.html
@@ -7,6 +7,7 @@
   <link href="/dashboard/stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <h1>"The great work of shakti"</h1>
   <div class="contain-to-grid">
     <nav class="top-bar" data-topbar>
       <ul class="title-area">
